perubahan semua file

--- a/index.html
+++ b/index.html
@@ -1,54 +1,44 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fuanpay - Aplikasi Transaksi Modern</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #001f3f; /* Biru navy */
-      color: white;
-      text-align: center;
-    }
-    header {
-      padding: 50px 20px;
-    }
-    h1 {
-      font-size: 2.5rem;
-      margin-bottom: 20px;
-      font-weight: bold;
-    }
-    p {
-      font-size: 1.2rem;
-      margin-bottom: 30px;
-    }
-    .btn {
-      background-color: #ffcc00;
-      color: #001f3f;
-      padding: 12px 25px;
-      text-decoration: none;
-      border-radius: 30px;
-      font-size: 1rem;
-      font-weight: bold;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
-    .btn:hover {
-      background-color: #ffdb4d;
-    }
-    section {
-      padding: 40px 20px;
-    }
-    .testimonial {
-      font-style: italic;
-      background-color: rgba(255,255,255,0.1);
-      padding: 20px;
-      border-radius: 10px;
-      max-width: 500px;
-      margin: 20px auto;
-      animation: fade 3s infinite alternate;
-    }
-    @keyframes fade {
-      0%
+  <title>Promosi Aplikasi</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-gradient-to-b from-blue-900 to-blue-600 text-white font-sans">  <!-- Header -->  <header class="text-center py-10">
+    <h1 class="text-4xl md:text-5xl font-bold mb-4">Selamat Datang di Aplikasi Kami</h1>
+    <p class="text-lg md:text-xl mb-6">Solusi mudah untuk transaksi harian Anda</p>
+    <a href="#download" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-2xl font-semibold shadow-lg hover:bg-yellow-300 transition">Download Aplikasi</a>
+  </header>  <!-- Fitur -->  <section class="max-w-5xl mx-auto grid md:grid-cols-3 gap-6 px-6 py-12">
+    <div class="bg-white text-blue-900 rounded-2xl shadow-lg p-6">
+      <h3 class="text-xl font-bold mb-2">Mudah Digunakan</h3>
+      <p>Antarmuka modern yang simpel, sehingga nyaman digunakan siapa saja.</p>
+    </div>
+    <div class="bg-white text-blue-900 rounded-2xl shadow-lg p-6">
+      <h3 class="text-xl font-bold mb-2">Transaksi Cepat</h3>
+      <p>Proses transaksi hanya dalam hitungan detik dengan keamanan terjamin.</p>
+    </div>
+    <div class="bg-white text-blue-900 rounded-2xl shadow-lg p-6">
+      <h3 class="text-xl font-bold mb-2">Dukungan 24/7</h3>
+      <p>Tim support siap membantu Anda kapan pun dibutuhkan.</p>
+    </div>
+  </section>  <!-- Testimoni -->  <section class="bg-blue-800 py-12 px-6 text-center">
+    <h2 class="text-3xl font-bold mb-6">Apa Kata Pengguna?</h2>
+    <div class="max-w-3xl mx-auto space-y-6">
+      <blockquote class="bg-white text-blue-900 rounded-2xl shadow-lg p-6 italic">
+        “Aplikasi ini benar-benar membantu bisnis saya! Transaksi jadi super cepat.”
+        <footer class="mt-2 font-bold">- Andi, Pengusaha</footer>
+      </blockquote>
+      <blockquote class="bg-white text-blue-900 rounded-2xl shadow-lg p-6 italic">
+        “Tampilan modern, mudah dipakai, dan sangat bermanfaat untuk kebutuhan sehari-hari.”
+        <footer class="mt-2 font-bold">- Sinta, Mahasiswa</footer>
+      </blockquote>
+    </div>
+  </section>  <!-- Download Section -->  <section id="download" class="text-center py-16">
+    <h2 class="text-3xl font-bold mb-4">Siap Memulai?</h2>
+    <p class="mb-6">Unduh aplikasi sekarang dan nikmati kemudahannya!</p>
+    <a href="#" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-2xl font-semibold shadow-lg hover:bg-yellow-300 transition">Download Sekarang</a>
+  </section>  <!-- Footer -->  <footer class="bg-blue-950 text-center py-6">
+    <p class="text-sm">&copy; 2025 Aplikasi Kami. Semua Hak Dilindungi.</p>
+  </footer></body>
+</html>
