--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   </section>  <!-- Download Section -->  <section id="download" class="text-center py-16">
     <h2 class="text-3xl font-bold mb-4">Siap Memulai?</h2>
     <p class="mb-6">Unduh aplikasi sekarang dan nikmati kemudahannya!</p>
+    <p class="mb-6">aplikasi fuanpay banyak sekali menawar kan produk game!</p>
     <a href="#" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-2xl font-semibold shadow-lg hover:bg-yellow-300 transition">Download Sekarang</a>
   </section>  <!-- Footer -->  <footer class="bg-blue-950 text-center py-6">
     <p class="text-sm">&copy; 2025 Aplikasi Kami. Semua Hak Dilindungi.</p>
