perubahan data base

--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
     <a href="#" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-2xl font-semibold shadow-lg hover:bg-yellow-300 transition">Download Sekarang</a>
   </section>  <!-- Footer -->  <footer class="bg-blue-950 text-center py-6">
     <p class="text-sm">&copy; 2025 Aplikasi Kami. Semua Hak Dilindungi.</p>
-  </footer></body>
+    <head)>="perubahan data base"<head>
+ </footer></body>
 </html>
